--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://esiji.github.io/URG",
+  "homepage": "https://esiji.github.com/URG",
   "name": "urg",
   "version": "0.1.0",
   "private": true,
